# Git_testing

./: dataset_langsmith.py  experiments.py  file_explore.py  gmail_graph.py  pyproject.toml  rag_app.py  types_of_runs.py  utils.py
.deepeval/: .deepeval_telemetry.txt
tests/: multi_turn.py  test_data.yaml
